--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Mi Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
-    <h1>Hola</h1>
-</body>
+    <header>
+        <div class="contenedor">
+            <h1>
+            Ey!, Soy Judith Fdez.
+            </h1>
+          <nav>
+            <a href="index.html">Inicio</a>
+            <a href="about.html">Experiencia</a>
+            <a href="projects.html">Proyectos</a>
+            <a href="contact.php">Contacto</a>
+          </nav>
+        </div>
+      </header>
+  
+    <div class="contenedor">
+      <main>
+        <section class="intro">
+          <h2>Desarrolladora Web Full Stack</h2>
+          <p>(En proceso...)</p>
+        </section>
+      </main>
+
+      <section class="skills">
+        <h2>My Skills</h2>
+        <div class="skills-grid">
+          <div class="skill-card"><i class="fab fa-html5"></i><span>HTML</span></div>
+          <div class="skill-card"><i class="fab fa-css3-alt"></i><span>CSS</span></div>
+          <div class="skill-card"><i class="fab fa-js-square"></i><span>JavaScript</span></div>
+          <div class="skill-card"><i class="fab fa-php"></i><span>PHP</span></div>
+          <div class="skill-card"><i class="fas fa-database"></i><span>MySQL</span></div>
+          <div class="skill-card"><i class="fab fa-git-alt"></i><span>Git</span></div>
+          <div class="skill-card"><i class="fab fa-github"></i><span>GitHub</span></div>
+        </div>
+      </section>
+      
+  
+      <footer>
+        <p>&copy; 2025 - Judith Fdez.</p>
+      </footer>
+    </div>
+  </body>
+  
 </html>
