--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <header>
         <div class="contenedor">
-            <h1>
-            Ey!, Soy Judith Fdez.
-            </h1>
+          <h1 class="nombre-header">
+            Ey!👋, Soy Judith Fdez.
+            <img src="https://static.vecteezy.com/system/resources/previews/017/047/854/non_2x/cute-cat-illustration-cat-kawaii-chibi-drawing-style-cat-cartoon-vector.jpg" alt="" class="avatar-neon">
+          </h1>
           <nav>
             <a href="index.html">Inicio</a>
             <a href="about.html">Experiencia</a>
@@ -31,7 +32,7 @@
       </main>
 
       <section class="skills">
-        <h2>My Skills</h2>
+        <h2>Tech Stack</h2>
         <div class="skills-grid">
           <div class="skill-card"><i class="fab fa-html5"></i><span>HTML</span></div>
           <div class="skill-card"><i class="fab fa-css3-alt"></i><span>CSS</span></div>
