--- a/Proyectos.html
+++ b/Proyectos.html
@@ -19,8 +19,8 @@
 
   <main class="proyectos-scroll">
     <section class="proyecto rojo">
-      <h2>Proyecto 1</h2>
-      <p>Descripción breve del proyecto.</p>
+      <h2>Pokecartas</h2>
+      <p>Proyecto que genera cartas aleatorias de cartas pokemon, partiendo de una API. Tecnologías usadas: PHP, HTML Y CSS</p>
     </section>
     <section class="proyecto azul">
       <h2>Proyecto 2</h2>
