--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <header>
         <div class="contenedor">
           <h1 class="nombre-header">
-            Ey!👋, Soy Judith Fdez.
-            <img src="https://static.vecteezy.com/system/resources/previews/017/047/854/non_2x/cute-cat-illustration-cat-kawaii-chibi-drawing-style-cat-cartoon-vector.jpg" alt="" class="avatar-neon">
+            Ey!👋, Soy Judith Fdez
           </h1>
           <nav>
             <a href="index.html">Inicio</a>
@@ -41,6 +40,35 @@
           <div class="skill-card"><i class="fas fa-database"></i><span>MySQL</span></div>
           <div class="skill-card"><i class="fab fa-git-alt"></i><span>Git</span></div>
           <div class="skill-card"><i class="fab fa-github"></i><span>GitHub</span></div>
+        </div>
+      </section>
+      <section class="timeline">
+        <h2>Experiencia</h2>
+        <div class="timeline-container">
+          <div class="timeline-item">
+            <div class="timeline-icon">🖥️</div>
+            <div class="timeline-content">
+              <h3>Prácticas - Empresa</h3>
+              <span>Mayo 2025</span>
+              <p>soon...</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-icon">🎓</div>
+            <div class="timeline-content">
+              <h3>Desarrollo de Aplicaciones con Tecnologías Web</h3>
+              <span>2025</span>
+              <p>Certificado Profesional N3, 600h</p>
+            </div>
+          <div class="timeline-item">
+            <div class="timeline-icon">💼</div>
+            <div class="timeline-content">
+              <h3>Back Office - OEST Oviedo</h3>
+              <span>2017 - 2024</span>
+              <p>Descripción pendiente...</p>
+            </div>
+          </div>
+          </div>
         </div>
       </section>
       <footer>
