--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Mi Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 </head>
 <body>
     <header>
@@ -16,7 +15,7 @@
           <nav>
             <a href="index.html">Inicio</a>
             <a href="about.html">Experiencia</a>
-            <a href="projects.html">Proyectos</a>
+            <a href="Proyectos.html">Proyectos</a>
             <a href="contact.php">Contacto</a>
           </nav>
         </div>
@@ -29,7 +28,6 @@
           <p>(En proceso...)</p>
         </section>
       </main>
-
       <section class="skills">
         <h2>Tech Stack</h2>
         <div class="skills-grid">
@@ -76,5 +74,4 @@
       </footer>
     </div>
   </body>
-  
 </html>
