--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
     <header>
-        <div class="contenedor">
-          <h1 class="nombre-header">
-            Ey!👋, Soy Judith Fdez
-          </h1>
+      <div class="contenedor header-flex">
+        <div class="header-izquierda">
+          <h1 class="nombre-header">Ey!👋, Soy Judith Fdez</h1>
           <nav>
             <a href="index.html">Inicio</a>
             <a href="about.html">Experiencia</a>
             <a href="Proyectos.html">Proyectos</a>
-            <a href="contact.php">Contacto</a>
+            <a href="#formulario-contacto">Contacto</a>
           </nav>
         </div>
+        <div class="header-derecha">
+          <a href="cv_judith.pdf" download class="btn-header">Descargar CV</a>
+          <a href="#formulario-contacto" class="btn-header-outline">Contacto</a>
+        </div>
+      </div>
       </header>
   
     <div class="contenedor">
@@ -67,6 +71,16 @@
             </div>
           </div>
           </div>
+          <section id="formulario-contacto" class="contacto">
+            <h2>Contáctame</h2>
+            <form action="contact.php" method="POST" class="formulario">
+              <input type="text" name="nombre" placeholder="Tu nombre" required>
+              <input type="email" name="email" placeholder="Tu email" required>
+              <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
+              <button type="submit">Enviar mensaje</button>
+            </form>
+          </section>
+          
         </div>
       </section>
       <footer>
