--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html">Inicio</a>
             <a href="about.html">Experiencia</a>
             <a href="Proyectos.html">Proyectos</a>
-            <a href="#formulario-contacto">Contacto</a>
+          
           </nav>
         </div>
         <div class="header-derecha">
@@ -28,7 +28,7 @@
     <div class="contenedor">
       <main>
         <section class="intro">
-          <h2>Desarrolladora Web Full Stack</h2>
+          <h2>Desarrolladora Web Full Stack 👩🏻‍💻</h2>
           <p>(En proceso...)</p>
         </section>
       </main>
@@ -72,7 +72,7 @@
           </div>
           </div>
           <section id="formulario-contacto" class="contacto">
-            <h2>Contáctame</h2>
+            <h2>Escríbeme ✉️</h2>
             <form action="contact.php" method="POST" class="formulario">
               <input type="text" name="nombre" placeholder="Tu nombre" required>
               <input type="email" name="email" placeholder="Tu email" required>
@@ -80,7 +80,6 @@
               <button type="submit">Enviar mensaje</button>
             </form>
           </section>
-          
         </div>
       </section>
       <footer>
